--- a/Materias/2S2020/PED_CE342/Turma_A/Seminarios.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/Seminarios.org
@@ -54,3 +54,9 @@
 - Pouca relação com a teoria
   + São apresentadas as equações, mas pouca análise e sim uma descrição do que são as variáveis
 ** Comentários para o grupo (G 04)
+
+* Grupo 02 - Ata 134
+
+* Grupo 03 - Ata 161
+
+* Grupo 07 - Ata 205
